[gd_scene load_steps=3 format=3 uid="uid://dfiovjlplcpyn"]

[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://Themes/GD-Theme.tres" id="1_ase85"]
[ext_resource type="Script" uid="uid://vtqjvxjohyvx" path="res://sprite_maker.gd" id="2_jqt3n"]

[node name="SpriteMaker" type="AcceptDialog"]
canvas_item_default_texture_filter = 3
title = "Sprite Maker"
initial_position = 1
size = Vector2i(1200, 821)
visible = true
theme = ExtResource("1_ase85")
ok_button_text = "SAVE"
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("2_jqt3n")

[node name="VBoxContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 1192.0
offset_bottom = 759.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CenterContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "X: (8 to 32 step 4)"
horizontal_alignment = 1

[node name="spnX" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
min_value = 8.0
max_value = 32.0
step = 4.0
value = 8.0

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y: (8 to 32 step 4)"
horizontal_alignment = 1

[node name="spnY" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
min_value = 8.0
max_value = 32.0
step = 4.0
value = 8.0

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="btnClear" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "CLEAR"

[node name="btnLoad" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "LOAD"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(340, 45)
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[b][center]NO SPRITE SELECTED[/center][/b]"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
modulate = Color(0.758191, 0.758192, 0.758191, 1)
self_modulate = Color(0.758191, 0.758192, 0.758191, 1)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/sv_width = 128
theme_override_constants/sv_height = 256
theme_override_constants/h_width = 60
theme_override_constants/center_slider_grabbers = 0
deferred_mode = true
can_add_swatches = false
presets_visible = false

[node name="DlgLoad" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(500, 500)
always_on_top = true
popup_window = true
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 1
root_subfolder = "Sprites"
filters = PackedStringArray("*.png")

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2/spnX" to="." method="_on_spn_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2/spnY" to="." method="_on_spn_y_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2/btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/HBoxContainer2/btnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="file_selected" from="DlgLoad" to="." method="_on_dlg_load_file_selected"]
